# football-emporium

./: .env-example  Cargo.toml  LICENSE  README.md  build.rs
src/: appstate.rs  constants.rs  env.rs  imdb.rs  main.rs  rest_api.rs
src/imdb/: data_types.rs  db_api.rs  json_fetcher.rs
src/rest_api/: get_api.rs  query_types.rs  response_types.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.vue  main.ts  styles.css
ui/src/components/loading/: Loading.vue
ui/src/components/matchsearch/: Filter.vue  List.vue  MatchItem.vue  MatchSearch.vue  Paginator.vue
ui/src/store/: matchlist.ts  storetypes.ts
ui/src/styles/: reset.css  variables.css
