[package]
name = "football-emporium"
version = "0.1.0"
edition = "2024"
authors = ["Barış Ürüm"]
license = "MIT"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
count-digits = "0.5.1"
dotenv = "0.15.0"
either = "1.15.0"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_repr = "0.1.20"
tokio = { version = "1.47.1", features = ["net", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
